<package>
  <name>rosh_core</name>
  <version>1.0.0</version>
  <description>Main ROSH scripting and interpreter environment.</description>
  <maintainer email="dan@lazewatsky.com">Maintained by Dan Lazewatsky</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosh_core</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Dan Lazewatsky</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roshlaunch</run_depend>
  <run_depend>rosh</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
